k8s/v1.36.2/clusters/dev/vault/kubernetes-objects/virtualServiceVault.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: vault-virtual-service
  namespace: vault
spec:
  hosts: ["vault.maifuj.com"]
  gateways: ["istio-ingress/gateway-https"]
  http:
    - route:
        - destination:
            host: vault-vev-ui.vault.svc.cluster.local
            port: {number: 8200}
